修改一下样式

--- a/src/components/Dialog/index.scss
+++ b/src/components/Dialog/index.scss
@@ -3,38 +3,29 @@
 @include b(YUJUN-dialog){
     z-index: 999;
     background-color: #fff;
+    // 弹窗标题和取消按钮
     @include e(header){
         padding: 20px 20px 10px;
+        display: flex;
+        justify-content: space-between;
         @include m(title){
           line-height: 24px;
-          font-size: 18px;
-          color: #303133;
         }
         @include m(btn){
-           position: absolute;
-           top: 20px;
-           right: 20px;
-           padding: 0;
-           background: transparent;
-           border: none;
-           outline: none;
            cursor: pointer;
-           font-size: 16px;
-           color:909399
         }
     }
     @include e(body){
         padding: 30px 20px;
-        color: #606266;
-        font-size: 14px;
+        // 指定了怎样在单词内断行。
         word-break: break-all;
     }
     @include e(footer){
         padding: 10px 20px 20px;
         text-align: right;
         box-sizing: border-box;
-        ::v-deep .one-button:first-child{
-          margin-right: 20px;
+        @include m(confirm){
+          margin-left:10px;
         }
     }
 }
