--- a/src/components/Dialog/index.scss
+++ b/src/components/Dialog/index.scss
@@ -29,5 +29,21 @@
           margin-left:10px;
         }
     }
-
+}
+// 动画部分
+.YUJUN-dialog-Ani-enter-active{
+  animation: YUJUN-dialog-Ani .3s;
+}
+.YUJUN-dialog-Ani-leave-active{
+  animation: YUJUN-dialog-Ani .3s reverse;
+}
+@keyframes YUJUN-dialog-Ani{
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
